load prompts dialog

--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -363,7 +363,7 @@
                         Label: # Title "Commands" 1
                             size_hint_x: 1
                             size_hint_y: None                        
-                            text: "Commands"
+                            text: "[b]Commands[/b]"
                             markup: True
                             halign: "left"                                                        
                             color: 0, 0, 0, 1    
@@ -418,7 +418,7 @@
                         Label: # Title "Commands" 2
                             size_hint_x: 1
                             size_hint_y: None                        
-                            text: "Commands"
+                            text: "[b]Commands[/b]"
                             markup: True
                             halign: "left"                            
                             color: 0, 0, 0, 1    
