--- a/src/screens/settings_screen.kv
+++ b/src/screens/settings_screen.kv
@@ -244,8 +244,8 @@
                     active: root.independent_models
                     size_hint_x: 0.02
                     halign: "left"
-                    background_checkbox_normal: "assets/checkbox_off.png"
-                    background_checkbox_down: "assets/checkbox_on.png"
+                    background_checkbox_normal: "assets/images/checkbox_off.png"
+                    background_checkbox_down: "assets/images/checkbox_on.png"
                     
 
             BoxLayout:                   
@@ -268,8 +268,8 @@
                     id: augmentation_checkbox
                     active: root.prompt_augmentation
                     
-                    background_checkbox_normal: "assets/checkbox_off.png"
-                    background_checkbox_down: "assets/checkbox_on.png"
+                    background_checkbox_normal: "assets/images/checkbox_off.png"
+                    background_checkbox_down: "assets/images/checkbox_on.png"
 
         # Buttons
         BoxLayout:
