fixed shooting from llm

--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -227,7 +227,7 @@
 
                         TextInput:
                             padding: 20, 20
-                            id: prompt_player_2                        
+                            id: prompt_history_player_2                        
                             text:""                             
                             markup: True                                                      
                             multiline: True
