config yaml update, new st.sh, new prompt builder

--- a/src/screens/settings_screen.kv
+++ b/src/screens/settings_screen.kv
@@ -241,7 +241,7 @@
                                     
                 CheckBox:
                     id: independent_checkbox
-                    active: root.independent_models
+                    active: root.independent_contexts
                     size_hint_x: 0.02
                     halign: "left"
                     background_checkbox_normal: "assets/images/checkbox_off.png"
